--- a/contact.html
+++ b/contact.html
@@ -88,6 +88,9 @@
                 <input type="submit" value="Send" />
               </div>
             </div>
+            <div class="field">
+              <div data-netlify-recaptcha="true"></div>
+            </div>
           </form>
         </div>
 
