--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,10 @@
 
     <section>
       <div class="title">
-        <h1>Go ahead and leave me a message<br /></h1>
+        <h1>
+          Need a Goal driven developer to join your team? <br />
+          ahead and leave me a message<br />
+        </h1>
       </div>
 
       <div class="contact">
