--- a/contact.html
+++ b/contact.html
@@ -55,8 +55,8 @@
     <section>
       <div class="title">
         <h1>
-          Need a Goal driven developer to join your team? <br />
-          ahead and leave me a message<br />
+          Need a Goal driven developer to join your team? Or you just want to
+          say Hi? Go ahead and leave me a message.
         </h1>
       </div>
 
