--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
         <h2>Hi there, Rita here!</h2>
         <p>
           I'm a Frontend Developer specializing in React, Responsive web design,
-          Javascript, CSS and Html. I am passionate, open, enjoy brain-tasking
-          and delivering tasks in resourceful and creative ways, regardless of
-          the time given,<br />
-          I try my best to adjust accordingly to meet deadlines. <br />
+          Javascript, CSS and Html. <br />I am passionate, open, enjoy
+          brain-tasking and delivering tasks in resourceful and creative ways,
+          regardless of the time given, I try my best to adjust accordingly to
+          meet deadlines. <br />
         </p>
         <h1>My names are Rita Chidinma Uzoma</h1>
         <a href="/" class="btn">Welcome</a>
