--- a/contact.html
+++ b/contact.html
@@ -21,30 +21,21 @@
         <div class="social-bar">
           <ul>
             <li>
-              <a href="https://facebook.com">
-                <img
-                  src="images/faceebook.png"
-                  target="_blank"
-                  alt="facebookicon"
-                />
+              <a
+                href="https://www.linkedin.com/in/rita-uzoma-4ab5501ba/"
+                target="_blank"
+              >
+                <img src="images/linkedinicon.png" alt="facebookicon" />
               </a>
             </li>
             <li>
-              <a href="https://twitter.com">
-                <img
-                  src="images/twitterr.png"
-                  target="_blank"
-                  alt="facebookicon"
-                />
+              <a href="https://twitter.com" target="_blank">
+                <img src="images/twitterr.png" alt="twittericon" />
               </a>
             </li>
             <li>
-              <a href="https://instagram.com">
-                <img
-                  src="images/instagram.png"
-                  target="_blank"
-                  alt="facebookicon"
-                />
+              <a href="https://github.com/i-am-rita" target="_blank">
+                <img src="images/gitubicon.jpg" alt="githubicon" />
               </a>
             </li>
           </ul>
@@ -55,8 +46,8 @@
     <section>
       <div class="title">
         <h1>
-          Need a Goal driven developer to join your team? Or you just want to
-          say Hi? Go ahead and leave me a message.
+          Need a Goal driven developer to join your team? Or just want to say
+          Hi? <br />Go ahead and leave me a message.
         </h1>
       </div>
 
