--- a/index.html
+++ b/index.html
@@ -21,30 +21,21 @@
         <div class="social-bar">
           <ul>
             <li>
-              <a href="https://facebook.com">
-                <img
-                  src="images/faceebook.png"
-                  target="_blank"
-                  alt="facebookicon"
-                />
+              <a
+                href="https://www.linkedin.com/in/rita-uzoma-4ab5501ba/"
+                target="_blank"
+              >
+                <img src="images/linkedinicon.png" alt="facebookicon" />
               </a>
             </li>
             <li>
-              <a href="https://twitter.com">
-                <img
-                  src="images/twitterr.png"
-                  target="_blank"
-                  alt="twittericon"
-                />
+              <a href="https://twitter.com" target="_blank">
+                <img src="images/twitterr.png" alt="twittericon" />
               </a>
             </li>
             <li>
-              <a href="https://instagram.com">
-                <img
-                  src="images/instagram.png"
-                  target="_blank"
-                  alt="instagramicon"
-                />
+              <a href="https://github.com/i-am-rita" target="_blank">
+                <img src="images/gitubicon.jpg" alt="githubicon" />
               </a>
             </li>
           </ul>
