--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           regardless of the time given, I try my best to adjust accordingly to
           meet deadlines. <br />
         </p>
-        <h1>My names are Rita Chidinma Uzoma</h1>
+        <h1>My name is Rita Chidinma Uzoma</h1>
         <a href="/" class="btn">Welcome</a>
       </div>
     </section>
