--- a/index.html
+++ b/index.html
@@ -5,18 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>rita.dev</title>
+    <title>ritadev</title>
   </head>
   <body>
     <header>
-      <div class="logo"><a href="index.html">.dev</a></div>
+      <div class="logo"><a href="index.html">Rita Uzoma</a></div>
       <div class="toggle"></div>
       <div class="navigation">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="services.html">What I do</a></li>
           <li><a href="work.html">My Projects</a></li>
-          <li><a href="contact.html">Contact Page</a></li>
         </ul>
         <div class="social-bar">
           <ul>
@@ -55,7 +53,7 @@
           meet deadlines. <br />
         </p>
         <h1>My name is Rita Chidinma Uzoma</h1>
-        <a href="/" class="btn">Welcome</a>
+        <a href="/work.html" class="btn">Welcome</a>
       </div>
     </section>
     <script src="script.js"></script>
