--- a/work.html
+++ b/work.html
@@ -5,18 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>rita.dev</title>
+    <title>ritadev</title>
   </head>
   <body>
     <header>
-      <div class="logo"><a href="index.html">.dev</a></div>
+      <div class="logo"><a href="index.html">Rita Uzoma</a></div>
       <div class="toggle"></div>
       <div class="navigation">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="services.html">What I do</a></li>
           <li><a href="work.html">My Projects</a></li>
-          <li><a href="contact.html">Contact Page</a></li>
         </ul>
         <div class="social-bar">
           <ul>
@@ -49,11 +47,11 @@
       </div>
       <div class="portfolio">
         <div class="item">
-          <img src="images/gorgeous.jpg" alt="" />
+          <img src="images/freecodelamp.PNG" alt="" />
           <div class="action">
-            <a href="https://shopping-syte.netlify.app/" target="_blank"
+            <a href="https://freecodelamp.netlify.app/" target="_blank"
               >Launch
-              <p>Expanding Pages for shopping</p>
+              <p>Switch to freecodecamp icon</p>
             </a>
           </div>
         </div>
@@ -67,11 +65,11 @@
           </div>
         </div>
         <div class="item">
-          <img src="images/bootyy.PNG" alt="" />
+          <img src="images/travelsnip.PNG" alt="" />
           <div class="action">
-            <a href="https://bootstrapped.netlify.app/" target="_blank"
+            <a href="https://picnic-webssy.netlify.app/" target="_blank"
               >Launch
-              <p>A bootstrapped website</p>
+              <p>Travel Website with awesome views</p>
             </a>
           </div>
         </div>
@@ -85,11 +83,11 @@
           </div>
         </div>
         <div class="item">
-          <img src="images/gatsbyjs.png" alt="" />
+          <img src="images/foodcafesnip.PNG" alt="" />
           <div class="action">
-            <a href="https://rita-tira.netlify.app/" target="_blank"
+            <a href="https://food-cafe-clone.netlify.app/" target="_blank"
               >Launch
-              <p>Portfolio with Gatsby</p>
+              <p>Food website to make choices from</p>
             </a>
           </div>
         </div>
