logo removed from index page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <div class="logo"><a href="index.html">Rita Uzoma</a></div>
+      <!-- <div class="logo"><a href="index.html">Rita Uzoma</a></div> -->
       <div class="toggle"></div>
       <div class="navigation">
         <ul>
