--- a/index.html
+++ b/index.html
@@ -46,11 +46,9 @@
       <div class="home-content">
         <h2>Hi there, Rita here!</h2>
         <p>
-          I'm a Frontend Developer specializing in React, Responsive web design,
-          Javascript, CSS and Html. <br />I am passionate, open, enjoy
-          brain-tasking and delivering tasks in resourceful and creative ways,
-          regardless of the time given, I try my best to adjust accordingly to
-          meet deadlines. <br />
+          I'm a Frontend Developer passionate about Responsive web design and web accessibility.
+           <br />I am passionate, open-minded, enjoy
+          brain-tasking and delivering tasks in resourceful and creative ways. <br />
         </p>
         <h1>My name is Rita Chidinma Uzoma</h1>
         <a href="/work.html" class="btn">Welcome</a>
