--- a/work.html
+++ b/work.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <div class="logo"><a href="index.html">Rita Uzoma</a></div>
+      <div class="logo"><a href="index.html">Rita</a></div>
       <div class="toggle"></div>
       <div class="navigation">
         <ul>
@@ -69,7 +69,7 @@
           <div class="action">
             <a href="https://picnic-webssy.netlify.app/" target="_blank"
               >Launch
-              <p>Travel Website with awesome views</p>
+              <p>Responsive Travel Website</p>
             </a>
           </div>
         </div>
@@ -87,7 +87,7 @@
           <div class="action">
             <a href="https://food-cafe-clone.netlify.app/" target="_blank"
               >Launch
-              <p>Food website to make choices from</p>
+              <p>Responsive food website </p>
             </a>
           </div>
         </div>
