updated about page and added hamburger

--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="work.css">
+    <!-- <link rel="stylesheet" href="menu.css"> -->
     <title>ritadev</title>
   </head>
   <body>
-    <header>
+    <!-- <header> -->
       <!-- <div class="logo"><a href="index.html">Rita Uzoma</a></div> -->
-      <div class="toggle"></div>
+      <!-- <div class="toggle"></div>
       <div class="navigation">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="work.html">My Projects</a></li>
-        </ul>
+        </ul> -->
+       
+<!-- 
         <div class="social-bar">
           <ul>
             <li>
@@ -37,23 +41,71 @@
               </a>
             </li>
           </ul>
+        </div> -->
+      <!-- </div> -->
+    <!-- </header> -->
+    <header>
+      <nav class="navbar">
+        <!-- <a href="#" class="nav-logo">sunnyside</a> -->
+        <ul class="nav-menu">
+            <li class="nav-item">
+                <a href="index.html" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+                <a href="about.html" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+                <a href="work.html" class="nav-link">Portfolio</a>
+            </li>
+            <!-- <li class="nav-item">
+                <a href="#" class="nav-link" id="link-nav">
+                  <button>Contact</button>
+                </a>
+            </li> -->
+        </ul>
+        <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
         </div>
+    </nav>
+    
+    <!-- <section class="home"> -->
+      <!-- Effect wrap -->
+      <div class="effect-wrap">
+        <div class="effect effect-1">
+        </div>
+        <div class="effect effect-2">
+          <div></div>  <div></div> <div></div> <div></div> <div></div>
+          <div></div> <div></div> <div></div> <div></div> <div></div>
+      </div>
+        <div class="effect effect-4">
+          <div></div>  <div></div> <div></div> <div></div> <div></div>
+          <div></div> <div></div> <div></div> <div></div> <div></div>
+      </div>
+           <!-- <div class="effect effect-5">
+                <div></div>  <div></div> <div></div> <div></div> <div></div>
+                <div></div> <div></div> <div></div> <div></div> <div></div>
+            </div> -->
+            <div class="effect effect-6">
+            </div>
+        </div>
+      <img src="images/idesign.jpg" class="home-img" alt="home-img" />
+      <div class="home-content">
+        <h2>Hi there!</h2>
+        <p>
+          I'm a Frontend Developer passionate about Responsive web design and accessibility.
+           <br />I am passionate, open-minded, enjoy
+          brain-tasking and delivering tasks in creative ways. <br />
+        </p>
+        <h1>My name is Rita Chidinma Uzoma</h1>
+        <!-- <a href="/about.html" class="btn">Welcome</a> -->
       </div>
     </header>
 
-    <section class="home">
-      <img src="images/idesign.jpg" class="home-img" alt="home-img" />
-      <div class="home-content">
-        <h2>Hi there, Rita here!</h2>
-        <p>
-          I'm a Frontend Developer passionate about Responsive web design and web accessibility.
-           <br />I am passionate, open-minded, enjoy
-          brain-tasking and delivering tasks in resourceful and creative ways. <br />
-        </p>
-        <h1>My name is Rita Chidinma Uzoma</h1>
-        <a href="/work.html" class="btn">Welcome</a>
-      </div>
-    </section>
+    <!-- </section> -->
+
+  
     <script src="script.js"></script>
   </body>
 </html>
