--- a/work.html
+++ b/work.html
@@ -4,12 +4,35 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="about.css"/>
+    <link rel="stylesheet" href="work.css"/>
+    <!-- <link rel="stylesheet" href="menu.css"> -->
     <title>ritadev</title>
   </head>
   <body>
-    <header>
-      <div class="logo"><a href="index.html">Rita</a></div>
+    <!-- <header> -->
+     
+      <!-- <div class="menu-wrap ">
+      <input type="checkbox" class="toggler">
+      <div class="hamburger"><div></div></div>
+      <div class="menu">
+          <div>
+              <div>
+          <ul>
+              <li><a onclick="toggle()"  href="index.html">home</a></li>
+              <!-<li><a onclick="toggle()"  href="about.html">about</a></li>
+              <li><a onclick="toggle()"  href="services.html">services</a></li>
+              <li><a onclick="toggle()"  href="work.html">portfolio</a></li> -->
+              <!-- <li><a href="#" class="link-item outer-shadow hover-in-shadow">testimonial</a></li>
+              <li><a href="#" class="link-item outer-shadow hover-in-shadow">contact</a></li> -->
+          <!-- </ul>
+      </div>
+      </div>
+      </div>
+  </div>  -->
+<!-- </header> -->
+      <!-- <div class="logo"><a href="index.html">Rita</a></div>
       <div class="toggle"></div>
       <div class="navigation">
         <ul>
@@ -38,10 +61,34 @@
             </li>
           </ul>
         </div>
-      </div>
-    </header>
+      </div> -->
+    <!-- </header> -->
 
     <section>
+      <nav class="navbar">
+        <!-- <a href="#" class="nav-logo">sunnyside</a> -->
+        <ul class="nav-menu">
+            <li class="nav-item">
+                <a href="index.html" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+                <a href="about.html" class="nav-link ">About</a>
+            </li>
+            <li class="nav-item">
+                <a href="work.html" class="nav-link ">Portfolio</a>
+            </li>
+            <!-- <li class="nav-item">
+                <a href="#" class="nav-link" id="link-nav">
+                  <button>Contact</button>
+                </a>
+            </li> -->
+        </ul>
+        <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+    </nav>
       <div class="title">
         <h1>Projects</h1>
       </div>
@@ -78,7 +125,7 @@
           <div class="action">
             <a href="https://split-landinpage.netlify.app/" target="_blank"
               >Launch
-              <p>Split landingpage for shopping</p>
+              <p>Split landing page for shopping</p>
             </a>
           </div>
         </div>
@@ -102,6 +149,8 @@
         </div>
       </div>
     </section>
+  <!-- </header> -->
+
     <script src="script.js"></script>
   </body>
 </html>
